--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <link rel="icon" href="/images/bodyBg.jpg" type="image/icon type">
     <title>Home | EMG</title>
-    <link type="text/css" rel="stylesheet" href="/css/index.css"/>
-    <link type="text/css" rel="stylesheet" href="/css/general.css"/>
-    <script type="text/javascript" src="/js/javascript.js"></script>
+    <link type="text/css" rel="stylesheet" href="index.css"/>
+    <link type="text/css" rel="stylesheet" href="general.css"/>
+    <script type="text/javascript" src="javascript.js"></script>
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-
 awesome.min.css">
@@ -31,7 +31,7 @@ awesome.min.css">
                 exciting game 'Save Our Spidey'.</p>
         </div>
         <div class="img">
-            <img src="/images/joystick.jpg" alt="Joystick"/>
+            <img src="joystick.jpg" alt="Joystick"/>
         </div>
         <div id="playNow">
             <a href="saveOurSpidey.html">
