--- a/saveOurSpidey.html
+++ b/saveOurSpidey.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="icon" href="/images/bodyBg.jpg" type="image/icon type">
+    <link rel="icon" href="bodyBg.jpg" type="image/icon type">
     <title>SOS | EMG</title>
-    <link type="text/css" rel="stylesheet" href="/css/general.css"/>
-    <link type="text/css" rel="stylesheet" href="/css/sos.css"/>
-    <script type="text/javascript" src="/js/javascript.js"></script>
+    <link type="text/css" rel="stylesheet" href="general.css"/>
+    <link type="text/css" rel="stylesheet" href="sos.css"/>
+    <script type="text/javascript" src="javascript.js"></script>
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-
 awesome/4.7.0/css/font-awesome.min.css">
@@ -35,13 +35,13 @@ awesome/4.7.0/css/font-awesome.min.css">
             <div class="target"><p id="target">Target: 1000</p></div>
         </div>
         <div id="spidey">
-            <img src="/images/spideyHead.png" alt="Spidey" id="spideyImg"/>
+            <img src="spideyHead.png" alt="Spidey" id="spideyImg"/>
         </div>
         <div id="cryingSpidey">
-            <img src="/images/cryingSpidey.png" alt="Crying Spidey" id="cryingSpideyImg"/>
+            <img src="cryingSpidey.png" alt="Crying Spidey" id="cryingSpideyImg"/>
         </div>
         <div id="goblin">
-            <img src="/images/goblinBomb.png" alt="Goblin Bomb" id="goblinImg"/>
+            <img src="goblinBomb.png" alt="Goblin Bomb" id="goblinImg"/>
         </div>
         <div class="runway"></div>
     </div>
