--- a/stylesConference.html
+++ b/stylesConference.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <title>Styles Conference</title>
-    <link rel="stylesheet" href="/css/stylesConference.css">
+    <link rel="stylesheet" href="stylesConference.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:100,300,400">
 </head>
 <body>
@@ -27,7 +27,7 @@
         <section class="teaser col-1-3">
             <h5>Speakers</h5>
             <a href="">
-                <img src="/images/speakers.jpg" alt="Professional Speaker">
+                <img src="speakers.jpg" alt="Professional Speaker">
                 <h3>World-Class Speakers</h3>
             </a>
             <p>Joining us from all around the world are over twenty fantastic speakers, here to share
@@ -35,7 +35,7 @@
         </section><section class="teaser col-1-3">
         <h5>Schedule</h5>
         <a href="">
-            <img src="/images/schedule.jpg" alt="Conference Attendees">
+            <img src="schedule.jpg" alt="Conference Attendees">
             <h3>Three Inspiring Days</h3>
         </a>
         <p>Enjoy three inspiring and action-packed days of talks, gatherings, and all-around good
@@ -43,7 +43,7 @@
     </section><section class="teaser col-1-3">
         <h5>Venue</h5>
         <a href="">
-            <img src="/images/venue.jpg" alt="The Chicago Theatre">
+            <img src="venue.jpg" alt="The Chicago Theatre">
             <h3>The Chicago Theatre</h3>
         </a>
         <p>Within the heart of downtown Chicago, The Chicago Theatre will provide a beautiful
